feat: remove token from project